--- a/style.css
+++ b/style.css
@@ -198,6 +198,19 @@ ul{
     display: flex;
     justify-content: center;
     width: 100%;
+    padding: 30px;
+  }
+
+  .footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 52px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #eee;
   }
   
 
