--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 *{
     flex-wrap: wrap;
+    background-color: wheat;
 }
 header{
-    background-color: #1F2937;
+    /* background-color: #1F2937; */
     display: flex;
     justify-content: space-between;
     padding: 8px;
@@ -17,19 +18,20 @@ ul{
     
     display: flex;
     gap: 50px;
-    color: white;
+    color: black;
     padding: 8px;
-    
+    font-weight: bold;
 }
 .headlink li {
+
     padding: 8px;
     display: flex;
     align-items: center; }
   
 .headlink li a {
-    border: solid pink;
+    border: 10px solid pink;
     text-decoration: none;
-    color: white;
+    color: black;
     padding: 8px;
 }
 
@@ -44,7 +46,7 @@ ul{
 
 .containerHead{
     display: flex;
-    background-color: #1F2937;  
+    /* background-color: #1F2937;   */
     flex-direction: row; 
     gap: 100px;
     padding: 25px;
@@ -58,12 +60,15 @@ ul{
     width: 50%;
 }
 .texthead{
+  font-weight: bold;
+   font-family: monospace,Arial, "Helvetica Neue", Helvetica, sans-serif;
     padding: 8px;
-    color: white;
+    color: pink;
     font-size: 70px;
     margin-bottom: -12px;
 }
 .textheadsmall{
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     padding: 8px;
     color: white;
     font-size: 45px;
@@ -74,6 +79,7 @@ ul{
     padding: 8px;
     color: white;
     font-size: 30px;
+    font-family: Helvetica, Arial, sans-serif;
 }
 
 .group{
@@ -100,9 +106,12 @@ ul{
     cursor: pointer;
     max-width: 100px;
     justify-content: space-around;
+    border: 2px solid white;
+   margin-bottom: 8px;
   }
 /*--------------------------------------------*/
   .title {
+    
     font-size: 36px;
     font-weight: 900;
     margin-bottom: 50px;
@@ -144,7 +153,7 @@ ul{
     flex-direction: column;
     align-items: center;
     padding: 20px;
-    border: 15px solid pink;
+    /* border: 15px solid pink; */
     
   }
 
@@ -165,7 +174,7 @@ ul{
     gap: 16px;
     padding: 16px;
     background: #FCA5A5;
-    width: 500px;
+    width: 600px;
     border-radius: 900px;
     box-shadow: 2px 4px 16px pink;
   }
@@ -178,10 +187,13 @@ ul{
     font-size: 18px;
     font-weight: 700;
     margin-bottom: 8px;
+    background-color: #FCA5A5 ;
   }
   
   .textt {
     margin-bottom: 16px;
+    background-color: #FCA5A5 ;
+
   }
 
   .containerr{
@@ -191,6 +203,7 @@ ul{
     flex-direction: column;
     align-items: center;
     width: 100%;
+    background-color: #FCA5A5;
   }
 
   .containbox{
@@ -202,16 +215,9 @@ ul{
   }
 
   .footer {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 52px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #eee;
+    font-weight: bold;
+    color: palevioletred;
+    text-align: center;
+    padding: 20px;
   }
-  
-
  
